# aws-azure-saml

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CI-CD.md  CLAUDE.md  Cargo.toml  GITHUB-ACTIONS.md  LICENSE.md  README.md  RELEASE.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  main.rs
src/aws/: mod.rs  saml.rs  sts.rs
src/azure/: browser.rs  login.rs  mod.rs  state_machine.rs
src/config/: credentials.rs  mod.rs  paths.rs  profile.rs
src/prompts/: configure.rs  mod.rs
tests/: cli_integration.rs  config_integration.rs
