[package]
name = "aws-azure-saml"
version = "0.1.0"
edition = "2021"
authors = ["Jason Terando", "Claude (Sonnet)"]
description = "AWS CLI authentication using Azure Active Directory SAML SSO"
license = "MIT"
repository = "https://github.com/jasonterando/aws-azure-saml"

[[bin]]
name = "aws-azure-saml"
path = "src/main.rs"

[dependencies]
# Browser automation
chromiumoxide = "0.7"
futures = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.11"

# AWS SDK
aws-config = "1.5"
aws-sdk-sts = "1.48"
aws-types = "1.3"

# INI file handling
rust-ini = "0.21"

# XML/HTML parsing
quick-xml = "0.36"
scraper = "0.21"

# HTTP client (for proxy support)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# OpenSSL (vendored for cross-compilation)
openssl-sys = { version = "0.9", features = ["vendored"] }

# SAML encoding/decoding
base64 = "0.22"
flate2 = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system utilities
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# URL encoding
form_urlencoded = "1.2"
urlencoding = "2.1"
aws-smithy-types = "1.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
